CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_income_ddtn__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_income_ddtn</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_income_ddtn</externalName>
    <fields>
        <fullName>amt_ddtn_annual__c</fullName>
        <description>amt_ddtn_annual</description>
        <externalDeveloperName>amt_ddtn_annual</externalDeveloperName>
        <label>Amount Deduction Annual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_ddtn__c</fullName>
        <description>cde_type_ddtn</description>
        <externalDeveloperName>cde_type_ddtn</externalDeveloperName>
        <label>Code type Deduction</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Identifier Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_income_ddtn1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_ddtn_indiv__c</fullName>
        <description>idn_ddtn_indiv</description>
        <externalDeveloperName>idn_ddtn_indiv</externalDeveloperName>
        <label>Identifier Individual Deduction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Eligity Family Compsn ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Deduction Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_income_ddtn</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_income_ddtn__c</fullName>
        <description>idn_indiv_eligty_income_ddtn</description>
        <externalDeveloperName>idn_indiv_eligty_income_ddtn</externalDeveloperName>
        <label>Indiv Eligity Income Ddtn ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Identifier Eligity Family Composition</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Deduction Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_income_ddtn</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_income_ddtn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Individual Eligibility Deduction Income</label>
    <pluralLabel>Individual Eligibility Deduction Income</pluralLabel>
</CustomObject>